fix: delete whitespaces

--- a/style.css
+++ b/style.css
@@ -1,39 +1,39 @@
 body {
-	font-family: 'Lato', sans-serif;
-	width: 1020px;
+    font-family: 'Lato', sans-serif;
+    width: 1020px;
     margin: 0 auto;
-	padding: 0;
+    padding: 0;
 }
 .container {
-	padding: 0 40px;
+    padding: 0 40px;
 }
 .header {
-	background-color: #2d303a;
-	color: #fff;
-	border-bottom: 6px solid #323746;
-	padding: 30px 0;
+    background-color: #2d303a;
+    color: #fff;
+    border-bottom: 6px solid #323746;
+    padding: 30px 0;
 }
 .header__logo {
-	font-size: 25px;
-	font-weight: bold;
+    font-size: 25px;
+    font-weight: bold;
 }
 .red__star {
-	color: #f06c64;
+    color: #f06c64;
 }
 .nav {
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     text-transform: uppercase;
 }
 .menu {
-	list-style: none;
-	display: -webkit-flex;
-	display: -moz-flex;
+    list-style: none;
+    display: -webkit-flex;
+    display: -moz-flex;
 	display: -ms-flex;
 	display: -o-flex;
 	display: flex;
@@ -54,18 +54,18 @@ body {
 	border-bottom: 6px solid #ea676b;
 }
 .slides__wrap {
-	padding: 0 73px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	position: relative;
+    padding: 0 73px;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
 }
 .image__wrap {
-	width: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -119,14 +119,14 @@ body {
 	justify-content: space-between;
 }
 .info__item {
-	width: 300px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	margin-top: 8px;
-  margin-bottom: -9px;
+    width: 300px;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    margin-top: 8px;
+    margin-bottom: -9px;
 }
 .info__item img {
 	width: 59px;
@@ -135,15 +135,15 @@ body {
     margin-top: 20px;
 }
 .list__item-title {
-	font-size: 18px;
-	font-weight: bold;
-  margin-bottom: 0;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 0;
 }
 .list__item-text {
-	font-size: 12px;
-	font-weight: 400;
-  line-height: 20px;
-  text-align: justify;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: justify;
 }
 
 .portfolio {
@@ -206,6 +206,10 @@ body {
 	border:1px solid #fff;
 	color: #fff;
 	cursor: pointer;
+}
+.active {
+    color: #dedede;
+    border: 1px solid #c5c5c5;
 }
 .about {
 	background: #f2f2f2;
@@ -314,22 +318,22 @@ ul {
 	display: flex;
 }
 form input {
-	background-color: #d6564f;
-	border:0px;
-	border-radius: 5px;
-	width: 605px;
-	height: 36px;
-	align-items: center;
-	margin-bottom: 16px;
-	padding-left: 15px;
+    background-color: #d6564f;
+    border:0px;
+    border-radius: 5px;
+    width: 605px;
+    height: 36px;
+    align-items: center;
+    margin-bottom: 16px;
+    padding-left: 15px;
 }
 input::placeholder { 
-  color: #f48c8f;
-  font-weight: 300;
-  font-family: 'Lato', sans-serif;
+    color: #f48c8f;
+    font-weight: 300;
+    font-family: 'Lato', sans-serif;
 }
 .form_submit {
-	width: 130px;
+    width: 130px;
     padding: 0;
     background-color: #982923;
     color: #f0d8d9;
